# python-backend-template

./: .cursorignore  .env.example  .env.test.example  .gitignore  Dockerfile  README.md  allinone.py  docker-compose.yml  main.py  outbox_beat.py  pyproject.toml  pytest.ini  signal_launcher.py  worker.py  workflow_launcher.py
.cursor/rules/: api-and-naming.mdc  app-architecture.mdc  branch-workflow-conventions.mdc  design-doc-conventions.mdc  editing-safety.mdc  pre-action-triage.mdc  temp-doc-conventions.mdc  testing-conventions.mdc  workspace-hard-constraints.mdc
.cursor/skills/: README.md
.github/: copilot-instructions.md
app/: bootstrap_launcher.py  bootstrap_outbox.py  bootstrap_signal_launcher.py  bootstrap_web.py  bootstrap_worker.py  container.py  server.py
app/blob/: container.py
app/blob/query/: dto.py  (+1 more)
app/user/: container.py
app/workflows/: __init__.py
core/: logger.py
core/config/: __init__.py  event_packages.py  settings.py
core/db/: __init__.py  session.py
core/domain/: summary_status.py
core/exceptions/: __init__.py  base.py  token.py
core/helpers/: blob_download_url.py  captcha.py  document_converter.py  email_sender.py  external_registry.py  password.py  redis.py  redis_sync.py  rich_text.py  stream_utils.py  token.py  wechat_miniapp.py
core/response/: __init__.py  api_response.py  media_state.py  paged_result.py  rersponse_exception.py
docker/base-env/: .env.base-env.example  README.md  docker-compose.base-env.yml
docker/dev-env/: .env.dev-env.example  README.md  docker-compose.dev-env.yml
docs/: 测试说明.md  领域实现模板.md  领域边界设计.md
migrations/: README  env.py
migrations/versions/: framework_outbox.py  pre_domain.py
pami_event_framework/: __init__.py  __version__.py  autodiscovery.py  config.py
scripts/: __init__.py  convert_event_handlers.py  create_user.py
tests/: conftest.py
(+220 files in other folders)
